# chess-ai

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: openings.json  openings_32.json  openings_64.json  wasm_openings.json
openings/: index.ts  openings.json  package.json  raw_opens.txt
server/: deploy  index.html  server.ts
src/: agent.rs  agent_opens.rs  assets.rs  board.rs  board_eval.rs  board_extras.rs  camera.rs  conf.rs  game.rs  main.rs  util.rs
src/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  piece.rs  queen.rs  rook.rs  util.rs
