[package]
name = "chess-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
derive-new = "0.5.9"
lazy_static = "1.4.0"
macroquad = "0.3.25"
rustc-hash = "1.1.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"

[target."cfg(windows)".dependencies]
image = "0.24.5"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.11.13", features = ["blocking"] }
colored = "2.0.0"

[target."cfg(windows)".build-dependencies]
winres = "0.1.12"
